infra/k8s/api-gate-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gate

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gate

  template:
    metadata:
      labels:
        app: api-gate
    spec:
      containers:
        - name: api-gate
          image: nielsvanm/brewtrack_core_api_gate

---
apiVersion: v1
kind: Service
metadata:
  name: api-gate-service

spec:
  selector:
    app: api-gate
  ports:
    - name: api-gate
      protocol: TCP
      port: 3000
      targetPort: 3000
